--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
       <artifactId>camel-test</artifactId>
       <scope>test</scope>
     </dependency>
+
+<!--MySQL driver-->
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.6</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -89,7 +97,7 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>1.6.0</version>
         <configuration>
-          <mainClass>com.study.MainApp</mainClass>
+          <mainClass>com.test.MainApp</mainClass>
           <includePluginDependencies>false</includePluginDependencies>
         </configuration>
       </plugin>
