数据库增删改查语句

--- a/src/main/resources/DB.properties
+++ b/src/main/resources/DB.properties
@@ -1,5 +1,5 @@
 #db connection parameters
 driverStr=com.mysql.jdbc.Driver
-connStr=jdbc:mysql://wentaotest.mysql.rds.aliyuncs.com:3306/studydemodatabase
+connStr=jdbc:mysql://wentaotest.mysql.rds.aliyuncs.com:3306/jdbcstudydemo
 dbUserName=root
 dbPassword=Wt7651607
