--- a/src/main/resources/DB.properties
+++ b/src/main/resources/DB.properties
@@ -3,3 +3,7 @@ driverStr=com.mysql.jdbc.Driver
 connStr=jdbc:mysql://wentaotest.mysql.rds.aliyuncs.com:3306/jdbcstudydemo
 dbUserName=root
 dbPassword=Wt7651607
+
+#datasource parameters
+initsize=1
+maxsize=3
